--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,37 +1,3 @@
-import LatestVersion from "../components/LatestVersion";
-import Christmas from "../components/Christmas";
-import Svelte from "../components/Svelte";
+# Deprecated
 
-# Introduction
-
-<LatestVersion packageName="gbs-fwk-buildingblock" />
-
-This documentation describes how to insatll and use `gbs-fwk-buildingblock`, `gbs-fwk-core` & `@grampro/fwk-core-global` :)
-
-{/* <Christmas /> */}
-
-<Svelte />
-
-## Installation
-
-Run the following command for installing the package.
-
-```bash copy
-npm i gbs-fwk-buildingblock
-```
-
-Then Add the css style link to `index.html`
-
-```bash copy
-<link href=" https://bblockcss.pages.dev/b-block.css"  rel="stylesheet">
-```
-
-## NPM Registry
-
-The Npm Registry for the buildingblock can be found at [Here](https://www.npmjs.com/package/gbs-fwk-buildingblock).
-
-## Playgroud
-
-import Link from "next/link";
-
-Check how the blocks and services behaves in live <Link href="/play-ground"><u style={{color: "#0366d6"}}>Here</u></Link>.
+Please note that this documentation site is for a deprecated library. For the latest information and updates, please refer to the new library documentation at [Grampro Kit](https://gramprokit.vercel.app).
